After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732276 - Don't fail to initialize if LC_CTYPE is not set
Don't fail to initialize if LC_CTYPE is not set
Status: RESOLVED FIXED
Product: pango
Classification: Platform
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: pango-maint
pango-maint
Depends on:
Blocks:
 
 
Reported: 2014-06-26 11:16 UTC by Sebastian Dröge (slomo)
Modified: 2014-06-27 06:50 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-pango-Don-t-fail-to-initialize-if-LC_CTYPE-is-not-se.patch (1.00 KB, patch)
2014-06-26 11:17 UTC, Sebastian Dröge (slomo)
committed Details | Review

Description Sebastian Dröge (slomo) 2014-06-26 11:16:55 UTC
See attached patch, should be quite self-explanatory :)

Ok to push?
Comment 1 Sebastian Dröge (slomo) 2014-06-26 11:17:10 UTC
Created attachment 279306 [details] [review]
0001-pango-Don-t-fail-to-initialize-if-LC_CTYPE-is-not-se.patch
Comment 2 Behdad Esfahbod 2014-06-26 18:44:08 UTC
Yes please.
Comment 3 Matthias Clasen 2014-06-26 20:24:44 UTC
Review of attachment 279306 [details] [review]:

.