pango: Don't fail to initialize if LC_CTYPE is not set

g_once_init_leave() does not work on NULL, and just returns... and
all future calls to g_once_init_enter() will block forever.

Happens on Android, so let's just fall back to the C locale if there's
nothing else we can do.

https://bugzilla.gnome.org/show_bug.cgi?id=732276